--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "main": "build/index.js",
   "module": "build/es/index.js",
   "typings": "typings/index.d.ts",
-  "repository": "TheSoftwareHouse/react-packages",
-  "author": "Rafał Kucharski <rafal.kucharski@thesoftwarehouse.pl>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TheSoftwareHouse/react-router-permissions"
+  },
+  "author": {
+    "name": "The Software House",
+    "url": "https://tsh.io/"
+  },
+  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
   "contributors": [
+    "Rafał Kucharski <rafal.kucharski@thesoftwarehouse.pl>",
     "Mateusz Klinowski <mateusz.klinowski@thesoftwarehouse.pl>",
-    "Łukasz Pietrek <lukasz.pietrek@thesoftwarehouse.pl>"
+    "Łukasz Pietrek <lukasz.pietrek@thesoftwarehouse.pl>",
+    "Jakub Musik <jakub.musik@thesoftwarehouse.pl>"
   ],
   "peerDependencies": {
     "react": "^16.6.0"
@@ -37,8 +46,24 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "flow-bin": "^0.81.0",
+    "husky": "^1.3.1",
     "jest": "^23.6.0",
-    "react": "^16.8.6"
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.(js|md)": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "jest": {
     "collectCoverageFrom": [
