--- a/example/package.json
+++ b/example/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "@tshio/react-router-permissions": "1.1.0",
     "bootstrap": "4.3.1",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "7.0.1",
     "react-router-dom": "5.0.0",
     "react-scripts": "2.1.8",
