--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "Rafał Kucharski <rafal.kucharski@thesoftwarehouse.pl>",
     "Mateusz Klinowski <mateusz.klinowski@thesoftwarehouse.pl>",
     "Łukasz Pietrek <lukasz.pietrek@thesoftwarehouse.pl>",
-    "Jakub Musik <jakub.musik@thesoftwarehouse.pl>"
+    "Jakub Musik <jakub.musik@thesoftwarehouse.pl>",
+    "Karol Noszczyński <karol.noszczynski@thesoftwarehouse.pl>"
   ],
   "peerDependencies": {
     "react": "^16.8.0"
@@ -46,6 +47,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "flow-bin": "^0.81.0",
+    "fstream": "^1.0.12",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.5",
